# psv

./: .gitignore  Cargo.toml  README.md  USAGE.md
.github/workflows/: rust.yml
src/: app.rs  bench.rs  config.rs  egui_tools.rs  gpu.rs  gradient.rs  main.rs  numbers.rs  shader.wgsl  sim.rs  sortview.rs  util.rs  vertex.rs
src/gui/: load.rs  mod.rs  playback.rs  visual.rs
src/sim/: mod.rs  parser.rs
