[package]
name = "psv"
version = "1.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true
lto = true

[dependencies]
bytemuck = "1.20.0"
cgmath = "0.18.0"
egui = "0.30.0"
egui-wgpu = "0.30.0"
egui-winit = "0.30.0"
pollster = "0.4.0"
rand = "0.8.5"
rfd = "0.15.1"
threadpool = "1.8.1"
wgpu = "23.0.1"
winit = "0.30.5"
