[package]
name = "psv"
version = "1.4.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true
lto = true

[dependencies]
anyhow = "1.0.95"
bytemuck = "1.20.0"
cgmath = "0.18.0"
egui = "0.30.0"
egui-wgpu = "0.30.0"
egui-winit = "0.30.0"
egui_extras = "0.30.0"
libc = "0.2.172"
pollster = "0.4.0"
rand = "0.8.5"
rfd = "0.15.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
threadpool = "1.8.1"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
wgpu = "23.0.1"
winit = "0.30.5"
