[package]
name = "psv"
version = "1.5.1"
edition = "2024"

[profile.release]
opt-level = 3
strip = true
lto = true

[dependencies]
anyhow = "1.0.95"
bytemuck = "1.20.0"
cgmath = "0.18.0"
egui = "0.33.2"
egui-wgpu = "0.33.2"
egui-winit = "0.33.2"
egui_double_slider = "1.0.0"
egui_extras = "0.33.2"
inquire = "0.9.1"
libc = "0.2.172"
pollster = "0.4.0"
rand = "0.10.0"
rfd = "0.17.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.18"
threadpool = "1.8.1"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
wgpu = "27.0.1"
winit = "0.30.9"
